# mailgun-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/attachments/: sample-file-2.txt
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/rocket/: Cargo.toml
examples/rocket/src/: main.rs
src/: lib.rs  mailgun.rs  main.rs
