[package]
name = "mailgun-rs"
version = "2.0.1"
authors = ["Dongri Jin <dongrium@gmail.com>"]
description = "An unofficial client library for the Mailgun API"
edition = "2018"
repository = "https://github.com/dongri/mailgun-rs"
license = "MIT"
keywords = ["email", "mailgun"]
documentation = "https://docs.rs/mailgun-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13", features = [
    "charset",
    "http2",
    "json",
    "blocking",
    "multipart",
    "stream",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
typed-builder = "0.23.2"

[features]
default = []
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
