[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
dotenv = "0.15.0"
once_cell = "1.19.0"

reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.152",  features = ["derive"] }
serde_json = "1.0.91"
typed-builder = "0.15.2"


[lib]
name = "mailgun_rs"
path = "../../src/lib.rs"
